--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -1,1 +1,5 @@
+@import '../../layouts/variables.css';
 
+.Homepage-Block {
+  margin-top: var(--spacer-2xl);
+}
